--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,14 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+/node_modules/
+/dist/
 # Windows Installer files
 *.cab
 *.msi
 *.msm
 *.msp
-
+*.log
 # Windows shortcuts
 *.lnk
 
